spn: cwis srl updates

--- a/notebooks/10-spn_cwis_srl.ipynb
+++ b/notebooks/10-spn_cwis_srl.ipynb
@@ -865,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -923,14 +923,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "938 ns ± 18.7 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n"
+      "895 ns ± 34.1 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n"
      ]
     }
    ],
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -981,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -1070,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -1130,15 +1130,6 @@
     "    Wo = tf.Variable(tf.truncated_normal(W_shape, stddev=1.0 / np.sqrt(n_features * n_hidden)), name='W' )\n",
     "    bo = tf.Variable(tf.zeros(b_shape, dtype=tf.float32), name='b')\n",
     "\n",
-    "#     h1, last_states =tf.nn.bidirectional_dynamic_rnn(\n",
-    "#         cell_fw=lstmcellf,\n",
-    "#         cell_bw=lstmcellb,\n",
-    "#         dtype=tf.float32,\n",
-    "#         inputs=t_tok_features_shp\n",
-    "#     )\n",
-    "\n",
-    "    \n",
-    "\n",
     "    hidden_outputs, states = tf.nn.bidirectional_dynamic_rnn(\n",
     "        cell_fw=fw,\n",
     "        cell_bw=bw,\n",
@@ -1147,11 +1138,7 @@
     "    )\n",
     "    hidden_fw, hidden_bw = hidden_outputs\n",
     "    Ho = tf.concat((tf.squeeze(hidden_fw, axis=0) ,tf.squeeze(hidden_fw, axis=0)),axis=1)\n",
-    "#     Hs = tf.scan(\n",
-    "#                 lambda a, x: tf.matmul(x, Wo),\n",
-    "#                 Ho, initializer=tf.matmul(Ho[0], Wo)) + bo\n",
-    "#     Z = tf.nn.tanh( tf.matmul( tf.squeeze(outputs, axis=0), W) + b, name='hidden_layer' )\n",
-    "#     Z = tf.nn.tanh( Hs, name='hidden_layer' )\n",
+    "\n",
     "    Z = tf.nn.tanh( tf.matmul( Ho, Wo ) + bo, name='hidden_layer' )\n",
     "\n",
     "# Those are the interval parameters\n",
@@ -1160,28 +1147,23 @@
     "    b_interval = tf.Variable(tf.zeros(b_interval_shape, dtype=tf.float32), name='b_interval')\n",
     "    \n",
     "    # begin of interval\n",
-    "    i_s = tf.placeholder(tf.int32, shape=(None,1))\n",
+    "    IntervalStart = tf.placeholder(tf.int32, shape=(None,1))\n",
     "    # end of interval\n",
-    "    i_f = tf.placeholder(tf.int32, shape=(None,1))\n",
+    "    IntervalFinish = tf.placeholder(tf.int32, shape=(None,1))\n",
+    "\n",
     "# features from intervals\n",
-    "i_f_score = tf.gather_nd(Z, i_f-1)\n",
-    "i_s_score = tf.gather_nd(Z, i_s)\n",
+    "IntervalFinishZ = tf.gather_nd(Z, IntervalFinish-1)\n",
+    "IntervalStartZ = tf.gather_nd(Z, IntervalStart)\n",
     "\n",
-    "i_score = tf.concat((i_f_score, i_s_score), axis=1)\n",
-    "scores_interval = tf.matmul(i_score, W_interval) + b_interval\n",
+    "IntervalZ = tf.concat((IntervalFinishZ, IntervalStartZ), axis=1)\n",
+    "IntervalScores = tf.matmul(IntervalZ, W_interval) + b_interval\n",
     "\n",
-    "scores_flat = tf.reshape(scores_interval, (-1,1)) # column matrix\n",
-    "scores_mean = tf.reduce_mean(scores_flat) # scalar\n",
-    "scores_diff = scores_flat - scores_mean   # centralize data --> mean zero\n",
+    "ScoresFlat = tf.reshape(IntervalScores, (-1,1)) # column array n_classes * ((len + 1 ) * len) / 2 \n",
+    "ScoresMean = tf.reduce_mean(ScoresFlat) # scalar\n",
+    "ScoresDiff = ScoresFlat - ScoresMean   # centralize data --> mean zero\n",
     "\n",
-    "scores_std = tf.sqrt(tf.reduce_sum(scores_diff * scores_diff))\n",
-    "scores_op = scores_diff /( scores_std + 1e-8 )\n",
-    "\n",
-    "\n",
-    "# a partir das features do intervalo computamos o score\n",
-    "# score_op = tf.matmul(X, W_interval, name='xW') + b_interval\n",
-    "\n",
-    "# predict_op = tf.argmax(scores_op, axis=1, name='Prediction')"
+    "ScoresStd = tf.sqrt(tf.reduce_sum(ScoresDiff * ScoresDiff))\n",
+    "ScoresOp = ScoresDiff /( ScoresStd + 1e-8 )"
    ]
   },
   {
@@ -1193,14 +1175,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(561, 36)\n"
+      "(33, 100) (561, 200) (561, 100) (561, 100) (200, 36) (1, 36) (561, 36)\n"
      ]
     }
    ],
@@ -1211,45 +1193,104 @@
     "\n",
     "with tf.Session() as sess:\n",
     "    sess.run(tf.global_variables_initializer())\n",
-    "    out_scores_interval = sess.run(scores_interval, feed_dict={\n",
+    "#     out_scores_interval = sess.run(scores_interval, feed_dict={\n",
+    "    arg_list = [Z, IntervalZ, IntervalStartZ, IntervalFinishZ, W_interval, b_interval, IntervalScores]\n",
+    "#     ZZ, scores, start_scores, finish_scores = sess.run(arg_list, feed_dict={\n",
+    "    data_list = sess.run(arg_list, feed_dict={\n",
     "        X_words:words,\n",
     "        X_ctx_p_left: ctx_p_left,\n",
     "        X_ctx_p: ctx_p0,\n",
     "        X_ctx_p_right: ctx_p_right,        \n",
     "        X_marker: marker,                \n",
     "        X_pos:gpos,\n",
-    "        i_s: chunk_start,\n",
-    "        i_f: chunk_finish\n",
+    "        IntervalStart: chunk_start,\n",
+    "        IntervalFinish: chunk_finish\n",
     "    })\n",
+    "    ZZ, scores, start_scores, finish_scores, Wi, bi, inteval_scores = data_list\n",
     "    # flat gives the score for each candidate\n",
-    "print(out_scores_interval.shape)\n"
+    "\n",
+    "print(ZZ.shape, scores.shape, start_scores.shape, finish_scores.shape, Wi.shape, bi.shape, inteval_scores.shape)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(561, 1) (561, 1)\n",
+      "(33, 100)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(chunk_start.shape, chunk_finish.shape)\n",
+    "\n",
+    "print(ZZ.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "Must be true True\n",
+      "Must be false False\n",
+      "Must be true True\n",
+      "Must be true True\n"
+     ]
+    }
+   ],
+   "source": [
+    "start_scores_test = np.array([ZZ[s,:] for s in chunk_start[:,0].tolist()])\n",
+    "print(np.allclose(start_scores_test, start_scores))\n",
+    "finish_scores_test = np.array([ZZ[s-1,:] for s in chunk_finish[:,0].tolist()])\n",
+    "print(np.allclose(finish_scores_test, finish_scores))\n",
+    "print('Must be true', np.allclose(start_scores_test[0, :], finish_scores_test[0,:]))\n",
+    "print('Must be false', np.allclose(start_scores_test[1, :], finish_scores_test[1,:]))\n",
+    "scores_test = np.concatenate((finish_scores_test, start_scores_test), axis=1)\n",
+    "print('Must be true', np.allclose(scores_test[0, :], scores[0,:]))\n",
+    "print('Must be true', np.allclose(np.matmul(scores_test,  Wi) + bi, inteval_scores))\n",
+    "# start_scores_test = np.concatenate(start_scores_list, axis=1)\n",
+    "# print(start_scores_test.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def pred(sess, x_words, x_ctx_p_left, x_ctx_p0, x_ctx_p_right, x_marker, x_pos, x_chunk_start, x_chunk_finish):\n",
-    "    scores = sess.run(scores_op,feed_dict={\n",
+    "    scores = sess.run(ScoresOp,feed_dict={\n",
     "        X_words: x_words,\n",
     "        X_ctx_p_left: x_ctx_p_left,\n",
     "        X_ctx_p: x_ctx_p0,\n",
     "        X_ctx_p_right: x_ctx_p_right,        \n",
     "        X_marker: x_marker,                \n",
     "        X_pos:x_pos,\n",
-    "        i_s: x_chunk_start,\n",
-    "        i_f: x_chunk_finish\n",
+    "        IntervalStart: x_chunk_start,\n",
+    "        IntervalFinish: x_chunk_finish\n",
     "    })\n",
+    "    # scores is a ((proplen + 1) * (proplen) / 2) * n_classes  \n",
     "    starts = np.repeat(x_chunk_start, n_classes).reshape((-1,1))\n",
     "    ends = np.repeat(x_chunk_finish, n_classes).reshape((-1,1))\n",
     "    \n",
     "    ck_len = len(x_chunk_start)\n",
     "    colors = np.array(list(np.arange(n_classes))*ck_len)\n",
-    "    \n",
+    "\n",
+    "    # Finds best allocation given the scores and the chunk_space\n",
     "    r_int = cwis.compute_schedule(starts.flatten(), ends.flatten(), scores, colors) # index of the cadidates of predicted solution\n",
     "    r_ext = list(zip(starts[r_int].flatten(),ends[r_int].flatten(), colors[r_int].flatten())) # from integer to triple\n",
     "    return r_int, r_ext"
@@ -1264,17 +1305,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[20180 20108 20000 19856 19676 19460 19208 18920 18596 18236 17840 17408\n",
-      " 16940 16436 15896 15320 14708 14060 13376 12656 11900 11108 10280  9416\n",
-      "  8516  7580  6608  5600  4556  3476  2360  1208    20]\n",
-      "[(32, 33, 20), (31, 32, 20), (30, 31, 20), (29, 30, 20), (28, 29, 20), (27, 28, 20), (26, 27, 20), (25, 26, 20), (24, 25, 20), (23, 24, 20), (22, 23, 20), (21, 22, 20), (20, 21, 20), (19, 20, 20), (18, 19, 20), (17, 18, 20), (16, 17, 20), (15, 16, 20), (14, 15, 20), (13, 14, 20), (12, 13, 20), (11, 12, 20), (10, 11, 20), (9, 10, 20), (8, 9, 20), (7, 8, 20), (6, 7, 20), (5, 6, 20), (4, 5, 20), (3, 4, 20), (2, 3, 20), (1, 2, 20), (0, 1, 20)]\n"
+      "(20196, 1)\n",
+      "[20178 20106 19998 19854 19674 19458 19206 18918 18594 18234 17838 17406\n",
+      " 16938 16434 15894 15318 14706 14058 13374 12654 11898 11106 10278  9414\n",
+      "  8514  7578  6606  5598  4554  3474  2358  1206    18]\n",
+      "[(32, 33, 18), (31, 32, 18), (30, 31, 18), (29, 30, 18), (28, 29, 18), (27, 28, 18), (26, 27, 18), (25, 26, 18), (24, 25, 18), (23, 24, 18), (22, 23, 18), (21, 22, 18), (20, 21, 18), (19, 20, 18), (18, 19, 18), (17, 18, 18), (16, 17, 18), (15, 16, 18), (14, 15, 18), (13, 14, 18), (12, 13, 18), (11, 12, 18), (10, 11, 18), (9, 10, 18), (8, 9, 18), (7, 8, 18), (6, 7, 18), (5, 6, 18), (4, 5, 18), (3, 4, 18), (2, 3, 18), (1, 2, 18), (0, 1, 18)]\n"
      ]
     }
    ],
@@ -1321,11 +1363,11 @@
     "# indices of the correct intervals\n",
     "T = tf.placeholder(tf.int32, shape=(None,), name='T')\n",
     "L = tf.placeholder(tf.int32, shape=(), name='L')\n",
-    "I = tf.to_int32(tf.range(L), name='indices')\n",
+    "# I = tf.to_int32(tf.range(L), name='indices')\n",
     "\n",
-    "T_flat = tf.reshape(T, (-1,1), name='T_flat')\n",
-    "Margin_interval = tf.placeholder(tf.float32)\n",
-    "Margin_values = tf.ones(tf.shape(T_flat)) * Margin_interval\n",
+    "T_flat = tf.reshape(T, (-1,1), name='T_flat') # column array\n",
+    "MarginFactor = tf.placeholder(tf.float32)\n",
+    "Margin_values = tf.ones(tf.shape(T_flat)) * MarginFactor\n",
     "Margin_scores_flat = tf.scatter_nd(T_flat, -Margin_values, tf.shape(scores_op)) # oppposite of gather_nd\n",
     "Scores_flat_with_margin = scores_op + Margin_scores_flat\n"
    ]
