notebooks: PropBankBr 1.0 Explore

--- a/notebooks/03 PropBankBr v1.0 Explore.ipynb
+++ b/notebooks/03 PropBankBr v1.0 Explore.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1090,7 +1090,7 @@
        "59                         PT   PROP        M|S             *)        -     *  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1102,56 +1102,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'propbankbr_split' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-3677ad3c0b0b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdfdevel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdfvalid\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdftest\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mpropbankbr_split\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mdftrain\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdfdevel\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdfvalid\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'propbankbr_split' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "DATASET_DEVELOP_PROPOSITIONS = (1,5300)\n",
+    "DATASET_TRAIN_PROPOSITIONS = (1,5300)\n",
     "DATASET_VALID_PROPOSITIONS = (5301,5536)\n",
-    "DATASET_TEST_PROP = (5537, ) \n",
+    "DATASET_TEST_PROPOSITIONS = (5537, 5776) \n",
     "\n",
-    "dfdevel, dfvalid, dftest= propbankbr_split(df)\n",
-    "dftrain= pd.concat((dfdevel,dfvalid))"
+    "\n",
+    "dftrain = df[ (df['P'] >= DATASET_TRAIN_PROPOSITIONS[0]) \\\n",
+    "              & (df['P'] <= DATASET_TRAIN_PROPOSITIONS[1]) ]\n",
+    "\n",
+    "dfvalid = df[ (df['P'] >= DATASET_VALID_PROPOSITIONS[0])\\\n",
+    "              & (df['P'] <= DATASET_VALID_PROPOSITIONS[1]) ]\n",
+    "\n",
+    "dftest = df[ (df['P'] >= DATASET_TEST_PROPOSITIONS[0])\\\n",
+    "              & (df['P'] <= DATASET_TEST_PROPOSITIONS[1]) ]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "====train database====\n",
+      "\t\t\ttrain\t\tdevel\t\tvalid\n",
+      "Proposições\t5299 100.00\t5535 104.45\t235 4.43\t\n",
+      "Sentenças\t3011 100.00\t3162 105.01\t151 5.01\t\n",
+      "Verbos Distintos\t989 100.00\t1000 101.11\t148 14.96\t\n"
+     ]
+    }
+   ],
    "source": [
     "print('====train database====')\n",
-    "prop_train=max(dftrain['P'])-min(dftrain['P'])\n",
-    "sent_train=max(dftrain['S'])-min(dftrain['S'])\n",
+    "prop_train= max(dftrain['P']) - min(dftrain['P'])\n",
+    "sent_train= max(dftrain['S']) - min(dftrain['S'])\n",
     "verb_train=len(set(dftrain['PRED']))-1\n",
-    "\n",
-    "prop_develop=max(dfdevel['P'])-min(dfdevel['P'])\n",
-    "sent_develop=max(dfdevel['S'])-min(dfdevel['S'])\n",
-    "verb_develop=len(set(dfdevel['PRED']))-1\n",
-    "\n",
-    "\n",
-    "prop_develop_perc= (float(prop_develop) / prop_train)*100\n",
-    "sent_develop_perc= (float(sent_develop) / sent_train)*100\n",
-    "verb_develop_perc= (float(verb_develop) / verb_train)*100\n",
     "\n",
     "\n",
     "prop_valid=max(dfvalid['P'])-min(dfvalid['P'])\n",
     "sent_valid=max(dfvalid['S'])-min(dfvalid['S'])\n",
     "verb_valid=len(set(dfvalid['PRED']))-1\n",
+    "\n",
+    "\n",
+    "prop_develop=max(dfvalid['P'])-min(dftrain['P'])\n",
+    "sent_develop=max(dfvalid['S'])-min(dftrain['S'])\n",
+    "verb_develop=len(set(dfvalid['PRED']).union(set(dftrain['PRED'])))-1\n",
+    "\n",
+    "\n",
+    "\n",
+    "prop_develop_perc = (float(prop_develop) / prop_train) * 100\n",
+    "sent_develop_perc= (float(sent_develop) / sent_train)*100\n",
+    "verb_develop_perc= (float(verb_develop) / verb_train)*100\n",
+    "\n",
+    "\n",
     "\n",
     "prop_valid_perc= (float(prop_valid) / prop_train)*100\n",
     "sent_valid_perc= (float(sent_valid) / sent_train)*100\n",
@@ -1171,11 +1180,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "====test database====\n",
+      "propositions: 239\n",
+      "sentences: 144\n",
+      "verbs distinct: 165\n",
+      "====total database====\n",
+      "propositions: 5775\n",
+      "sentences: 3307\n",
+      "verbs distinct: 1023\n",
+      "propositions: 0.041385281385281386\n"
+     ]
+    }
+   ],
    "source": [
     "print('====test database====')\n",
     "print('propositions:', max(dftest['P'])-min(dftest['P']))\n",
