--- a/notebooks/03 PropBankBr v1.0 Explore.ipynb
+++ b/notebooks/03 PropBankBr v1.0 Explore.ipynb
@@ -8,6 +8,8 @@
    "source": [
     "import os\n",
     "import sys\n",
+    "import re\n",
+    "from collections import defaultdict\n",
     "root_dir = '/'.join(os.getcwd().split('/')[:-1])\n",
     "datasets_dir = '{:}/datasets'.format(root_dir)\n",
     "propbank_dir = '{:}/csvs/1.0/'.format(datasets_dir)\n",
@@ -16,6 +18,11 @@
     "sys.path.insert(0, propbank_dir)\n",
     "\n",
     "file_path = '{:}/gs.csv'.format(propbank_dir)\n",
+    "\n",
+    "ARGUMENTS=['A0','A1','A2','A3','A4','A5',\n",
+    "'AM-ADV','AM-CAU','AM-DIR','AM-DIS','AM-EXT','AM-LOC',\n",
+    "'AM-MED','AM-MNR','AM-NEG','AM-PNC','AM-PRD','AM-REC',\n",
+    "'AM-TMP']\n",
     "import pandas as pd "
    ]
   },
@@ -1117,13 +1124,16 @@
     "dfvalid = df[ (df['P'] >= DATASET_VALID_PROPOSITIONS[0])\\\n",
     "              & (df['P'] <= DATASET_VALID_PROPOSITIONS[1]) ]\n",
     "\n",
+    "dfdevelop = df[ (df['P'] >= DATASET_TRAIN_PROPOSITIONS[0]) \\\n",
+    "              & (df['P'] <= DATASET_VALID_PROPOSITIONS[1]) ]\n",
+    "\n",
     "dftest = df[ (df['P'] >= DATASET_TEST_PROPOSITIONS[0])\\\n",
     "              & (df['P'] <= DATASET_TEST_PROPOSITIONS[1]) ]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1132,9 +1142,9 @@
      "text": [
       "====train database====\n",
       "\t\t\ttrain\t\tdevel\t\tvalid\n",
-      "Proposições\t5299 100.00\t5535 104.45\t235 4.43\t\n",
-      "Sentenças\t3011 100.00\t3162 105.01\t151 5.01\t\n",
-      "Verbos Distintos\t989 100.00\t1000 101.11\t148 14.96\t\n"
+      "Proposições\t5535 100.00\t5299 95.74\t235 4.25\t\n",
+      "Sentenças\t3162 100.00\t3011 95.22\t151 4.78\t\n",
+      "Verbos Distintos\t1000 100.00\t989 98.90\t148 14.80\t\n"
      ]
     }
    ],
@@ -1156,31 +1166,31 @@
     "\n",
     "\n",
     "\n",
-    "prop_develop_perc = (float(prop_develop) / prop_train) * 100\n",
-    "sent_develop_perc= (float(sent_develop) / sent_train)*100\n",
-    "verb_develop_perc= (float(verb_develop) / verb_train)*100\n",
+    "prop_train_perc = (float(prop_train) / prop_develop) * 100\n",
+    "sent_train_perc= (float(sent_train) / sent_develop)*100\n",
+    "verb_train_perc= (float(verb_train) / verb_develop)*100\n",
     "\n",
     "\n",
     "\n",
-    "prop_valid_perc= (float(prop_valid) / prop_train)*100\n",
-    "sent_valid_perc= (float(sent_valid) / sent_train)*100\n",
-    "verb_valid_perc= (float(verb_valid) / verb_train)*100\n",
+    "prop_valid_perc= (float(prop_valid) / prop_develop)*100\n",
+    "sent_valid_perc= (float(sent_valid) / sent_develop)*100\n",
+    "verb_valid_perc= (float(verb_valid) / verb_develop)*100\n",
     "\n",
     "print('\\t\\t\\ttrain\\t\\tdevel\\t\\tvalid')\n",
-    "values=('Proposições',prop_train,100.0,prop_develop, prop_develop_perc, prop_valid, prop_valid_perc)\n",
+    "values=('Proposições',prop_develop,100.0,prop_train, prop_train_perc, prop_valid, prop_valid_perc)\n",
     "buff= '%s\\t%d %.2f\\t%d %.2f\\t%d %.2f\\t' %  values\n",
     "print(buff)    \n",
-    "values=('Sentenças',sent_train,100.0,sent_develop, sent_develop_perc, sent_valid, sent_valid_perc)\n",
+    "values=('Sentenças',sent_develop,100.0,sent_train, sent_train_perc, sent_valid, sent_valid_perc)\n",
     "buff= '%s\\t%d %.2f\\t%d %.2f\\t%d %.2f\\t' %  values\n",
     "print(buff)    \n",
-    "values=('Verbos Distintos',verb_train,100.0,verb_develop, verb_develop_perc, verb_valid, verb_valid_perc)\n",
+    "values=('Verbos Distintos',verb_develop,100.0,verb_train, verb_train_perc, verb_valid, verb_valid_perc)\n",
     "buff= '%s\\t%d %.2f\\t%d %.2f\\t%d %.2f\\t' %  values\n",
     "print(buff)    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1217,38 +1227,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "stats = propbankbr_argument_stats(df)\n",
-    "stats_train= propbankbr_argument_stats(dftrain)\n",
-    "stats_devel= propbankbr_argument_stats(dfdevel)\n",
-    "stats_valid= propbankbr_argument_stats(dfvalid)\n",
-    "stats_test=  propbankbr_argument_stats(dftest)\n",
+    "def argument_transform(val):\n",
+    "        if isinstance(val, str):\n",
+    "#              val = re.sub(r'C\\-|\\(|\\)|\\*|\\\\n| +', '',val)            \n",
+    "            val = re.sub(r'\\(|\\)|\\*|\\\\n| +', '',val)            \n",
+    "            val = re.sub(r' ', '',val)          \n",
+    "        else: \n",
+    "            val=''\n",
+    "        return val\n",
+    "\n",
+    "def argument_count(df):\n",
+    "    '''Computes the count for each argument\n",
+    "    \n",
+    "    '''\n",
+    "    argcount_dict = defaultdict(lambda : 0)\n",
+    "    arg_list = df.loc[:,'ARG'].values.tolist()\n",
+    "    for arg_ in  arg_list:\n",
+    "        arg_ = argument_transform(arg_)\n",
+    "        if arg_ in ARGUMENTS:\n",
+    "            argcount_dict[arg_] += 1\n",
+    "    return argcount_dict\n",
+    "    \n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ARG\t\ttotal\t\ttrain\t\tvalid\t\ttest\n",
+      "A0\t3058 100.00\t2814 92.02\t0119 3.89\t0125 4.09\n",
+      "A1\t5148 100.00\t4730 91.88\t0206 4.00\t0212 4.12\n",
+      "A2\t1101 100.00\t1019 92.55\t0044 4.00\t0038 3.45\n",
+      "A3\t0113 100.00\t0104 92.04\t0007 6.19\t0002 1.77\n",
+      "A4\t0075 100.00\t0066 88.00\t0008 10.67\t0001 1.33\n",
+      "A5\t0000 100.00\t0000 0.00\t0000 0.00\t0000 0.00\n",
+      "AM-ADV\t0369 100.00\t0336 91.06\t0013 3.52\t0020 5.42\n",
+      "AM-CAU\t0156 100.00\t0149 95.51\t0006 3.85\t0001 0.64\n",
+      "AM-DIR\t0015 100.00\t0012 80.00\t0001 6.67\t0002 13.33\n",
+      "AM-DIS\t0294 100.00\t0270 91.84\t0013 4.42\t0011 3.74\n",
+      "AM-EXT\t0081 100.00\t0077 95.06\t0003 3.70\t0001 1.23\n",
+      "AM-LOC\t0778 100.00\t0721 92.67\t0029 3.73\t0028 3.60\n",
+      "AM-MED\t0000 100.00\t0000 0.00\t0000 0.00\t0000 0.00\n",
+      "AM-MNR\t0410 100.00\t0375 91.46\t0017 4.15\t0018 4.39\n",
+      "AM-NEG\t0335 100.00\t0300 89.55\t0016 4.78\t0019 5.67\n",
+      "AM-PNC\t0171 100.00\t0159 92.98\t0007 4.09\t0005 2.92\n",
+      "AM-PRD\t0192 100.00\t0175 91.15\t0010 5.21\t0007 3.65\n",
+      "AM-REC\t0065 100.00\t0060 92.31\t0000 0.00\t0005 7.69\n",
+      "AM-TMP\t1142 100.00\t1054 92.29\t0043 3.77\t0045 3.94\n",
+      "train total: 12421 100.0\n",
+      "devel total: 20843 167.8045245954432\n",
+      "valid total: 542 4.363577811770389\n"
+     ]
+    }
+   ],
+   "source": [
+    "stats = argument_count(df)\n",
+    "\n",
+    "stats_develop= argument_count(dfdevelop)\n",
+    "stats_train= argument_count(dftrain)\n",
+    "stats_valid= argument_count(dfvalid)\n",
+    "stats_test=  argument_count(dftest)\n",
     "\n",
     "devel_total=0\n",
     "train_total=0\n",
     "valid_total=0\n",
-    "arguments=['A0','A1','A2','A3','A4','A5',\n",
-    "'AM-ADV','AM-CAU','AM-DIR','AM-DIS','AM-EXT','AM-LOC',\n",
-    "'AM-MED','AM-MNR','AM-NEG','AM-PNC','AM-PRD','AM-REC',\n",
-    "'AM-TMP']\n",
-    "print('ARG\\ttrain\\t\\tdevel\\t\\tvalid')\n",
-    "for key in arguments:\n",
+    "# arguments=['A0','A1','A2','A3','A4','A5',\n",
+    "# 'AM-ADV','AM-CAU','AM-DIR','AM-DIS','AM-EXT','AM-LOC',\n",
+    "# 'AM-MED','AM-MNR','AM-NEG','AM-PNC','AM-PRD','AM-REC',\n",
+    "# 'AM-TMP']\n",
+    "template = '{:}\\t{:04d} {:.2f}\\t{:04d} {:.2f}\\t{:04d} {:.2f}\\t{:04d} {:.2f}'\n",
+    "\n",
+    "print('ARG\\t\\ttotal\\t\\ttrain\\t\\tvalid\\t\\ttest')\n",
+    "for key in ARGUMENTS:\n",
+    "    stats_list_ = [key] \n",
+    "    value = stats.get(key,0)\n",
+    "    perc  = 100.0\n",
+    "    stats_list_.append(value)\n",
+    "    stats_list_.append(perc)\n",
+    "    \n",
     "    trainvalue = stats_train.get(key,0)\n",
-    "    trainperc  = 100.0\n",
-    "    develvalue = stats_devel.get(key,0)\n",
-    "    develperc  = 100*(float(develvalue) / trainvalue)\n",
+    "    trainperc  = 100*(float(trainvalue) / value) if value > 0 else 0\n",
+    "    stats_list_.append(trainvalue)\n",
+    "    stats_list_.append(trainperc)\n",
+    "    \n",
     "    validvalue = stats_valid.get(key,0)\n",
-    "    validperc  = 100*(float(validvalue) / trainvalue)\n",
-    "    values=(key, trainvalue, trainperc, develvalue, develperc, validvalue, validperc)\n",
-    "    devel_total+=    develvalue\n",
+    "    validperc  = 100*(float(validvalue) / value) if value > 0 else 0\n",
+    "    stats_list_.append(validvalue)\n",
+    "    stats_list_.append(validperc)\n",
+    "    \n",
+    "    testvalue = stats_test.get(key,0)\n",
+    "    testperc  = 100*(float(testvalue) / value) if value > 0 else 0\n",
+    "    stats_list_.append(testvalue)\n",
+    "    stats_list_.append(testperc)\n",
+    "    \n",
+    "#     values=(key, trainvalue, trainperc, developvalue, developperc, validvalue, validperc)\n",
+    "\n",
+    "    devel_total+=    developvalue\n",
     "    train_total+=    trainvalue\n",
     "    valid_total+=    validvalue\n",
-    "    buff= '%s\\t%d %.2f\\t%d %.2f\\t%d %.2f\\t' %  values\n",
+    "  \n",
+    "    buff = template.format(*stats_list_) \n",
     "    print(buff)    \n",
     "    \n",
     "print('train total:',train_total,float(train_total)*100/train_total)    \n",
