--- a/notebooks/03 PropBankBr v1.0 Explore.ipynb
+++ b/notebooks/03 PropBankBr v1.0 Explore.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1097,7 +1097,7 @@
        "59                         PT   PROP        M|S             *)        -     *  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1109,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1133,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1190,7 +1190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1227,14 +1227,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "def argument_transform(val):\n",
     "        if isinstance(val, str):\n",
-    "#              val = re.sub(r'C\\-|\\(|\\)|\\*|\\\\n| +', '',val)            \n",
-    "            val = re.sub(r'\\(|\\)|\\*|\\\\n| +', '',val)            \n",
+    "            val = re.sub(r'C\\-|\\(|\\)|\\*|\\\\n| +', '',val)            \n",
+    "#             val = re.sub(r'\\(|\\)|\\*|\\\\n| +', '',val)            \n",
     "            val = re.sub(r' ', '',val)          \n",
     "        else: \n",
     "            val=''\n",
@@ -1258,36 +1258,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ARG\t\ttotal\t\ttrain\t\tvalid\t\ttest\n",
-      "A0\t3058 100.00\t2814 92.02\t0119 3.89\t0125 4.09\n",
-      "A1\t5148 100.00\t4730 91.88\t0206 4.00\t0212 4.12\n",
-      "A2\t1101 100.00\t1019 92.55\t0044 4.00\t0038 3.45\n",
-      "A3\t0113 100.00\t0104 92.04\t0007 6.19\t0002 1.77\n",
-      "A4\t0075 100.00\t0066 88.00\t0008 10.67\t0001 1.33\n",
-      "A5\t0000 100.00\t0000 0.00\t0000 0.00\t0000 0.00\n",
-      "AM-ADV\t0369 100.00\t0336 91.06\t0013 3.52\t0020 5.42\n",
-      "AM-CAU\t0156 100.00\t0149 95.51\t0006 3.85\t0001 0.64\n",
-      "AM-DIR\t0015 100.00\t0012 80.00\t0001 6.67\t0002 13.33\n",
-      "AM-DIS\t0294 100.00\t0270 91.84\t0013 4.42\t0011 3.74\n",
-      "AM-EXT\t0081 100.00\t0077 95.06\t0003 3.70\t0001 1.23\n",
-      "AM-LOC\t0778 100.00\t0721 92.67\t0029 3.73\t0028 3.60\n",
-      "AM-MED\t0000 100.00\t0000 0.00\t0000 0.00\t0000 0.00\n",
-      "AM-MNR\t0410 100.00\t0375 91.46\t0017 4.15\t0018 4.39\n",
-      "AM-NEG\t0335 100.00\t0300 89.55\t0016 4.78\t0019 5.67\n",
-      "AM-PNC\t0171 100.00\t0159 92.98\t0007 4.09\t0005 2.92\n",
-      "AM-PRD\t0192 100.00\t0175 91.15\t0010 5.21\t0007 3.65\n",
-      "AM-REC\t0065 100.00\t0060 92.31\t0000 0.00\t0005 7.69\n",
-      "AM-TMP\t1142 100.00\t1054 92.29\t0043 3.77\t0045 3.94\n",
-      "train total: 12421 100.0\n",
-      "devel total: 20843 167.8045245954432\n",
-      "valid total: 542 4.363577811770389\n"
+      "ARG\t\ttotal\t\ttrain\t\tvalid\t\ttest\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'developvalue' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-13-3e3479a0adef>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     40\u001b[0m \u001b[0;31m#     values=(key, trainvalue, trainperc, developvalue, developperc, validvalue, validperc)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     41\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 42\u001b[0;31m     \u001b[0mdevel_total\u001b[0m\u001b[0;34m+=\u001b[0m    \u001b[0mdevelopvalue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     43\u001b[0m     \u001b[0mtrain_total\u001b[0m\u001b[0;34m+=\u001b[0m    \u001b[0mtrainvalue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m     \u001b[0mvalid_total\u001b[0m\u001b[0;34m+=\u001b[0m    \u001b[0mvalidvalue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'developvalue' is not defined"
      ]
     }
    ],
@@ -1333,17 +1322,27 @@
     "    \n",
     "#     values=(key, trainvalue, trainperc, developvalue, developperc, validvalue, validperc)\n",
     "\n",
-    "    devel_total+=    developvalue\n",
+    "    devel_total+=    trainvalue + validvalue\n",
     "    train_total+=    trainvalue\n",
     "    valid_total+=    validvalue\n",
-    "  \n",
+    "    test_total+=     testvalue\n",
+    "    total += devel_total + te \n",
     "    buff = template.format(*stats_list_) \n",
     "    print(buff)    \n",
     "    \n",
     "print('train total:',train_total,float(train_total)*100/train_total)    \n",
     "print('devel total:',devel_total,float(devel_total)*100/train_total)    \n",
-    "print('valid total:',valid_total,float(valid_total)*100/train_total)    "
+    "print('valid total:',valid_total,float(valid_total)*100/train_total)    \n",
+    "\n",
+    "print('test total:',test_total,float(test_total)*100/train_total)    \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
