--- a/notebooks/03 PropBankBr v1.0 Explore.ipynb
+++ b/notebooks/03 PropBankBr v1.0 Explore.ipynb
@@ -1258,25 +1258,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ARG\t\ttotal\t\ttrain\t\tvalid\t\ttest\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'developvalue' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-13-3e3479a0adef>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     40\u001b[0m \u001b[0;31m#     values=(key, trainvalue, trainperc, developvalue, developperc, validvalue, validperc)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     41\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 42\u001b[0;31m     \u001b[0mdevel_total\u001b[0m\u001b[0;34m+=\u001b[0m    \u001b[0mdevelopvalue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     43\u001b[0m     \u001b[0mtrain_total\u001b[0m\u001b[0;34m+=\u001b[0m    \u001b[0mtrainvalue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m     \u001b[0mvalid_total\u001b[0m\u001b[0;34m+=\u001b[0m    \u001b[0mvalidvalue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'developvalue' is not defined"
+      "ARG\t\ttotal\t\ttrain\t\tvalid\t\ttest\n",
+      "A0\t3066 100.00\t2820 91.98\t0121 3.95\t0125 4.08\n",
+      "A1\t5221 100.00\t4794 91.82\t0214 4.10\t0213 4.08\n",
+      "A2\t1110 100.00\t1027 92.52\t0045 4.05\t0038 3.42\n",
+      "A3\t0115 100.00\t0106 92.17\t0007 6.09\t0002 1.74\n",
+      "A4\t0075 100.00\t0066 88.00\t0008 10.67\t0001 1.33\n",
+      "A5\t0000 100.00\t0000 0.00\t0000 0.00\t0000 0.00\n",
+      "AM-ADV\t0371 100.00\t0338 91.11\t0013 3.50\t0020 5.39\n",
+      "AM-CAU\t0157 100.00\t0150 95.54\t0006 3.82\t0001 0.64\n",
+      "AM-DIR\t0015 100.00\t0012 80.00\t0001 6.67\t0002 13.33\n",
+      "AM-DIS\t0295 100.00\t0271 91.86\t0013 4.41\t0011 3.73\n",
+      "AM-EXT\t0082 100.00\t0078 95.12\t0003 3.66\t0001 1.22\n",
+      "AM-LOC\t0779 100.00\t0722 92.68\t0029 3.72\t0028 3.59\n",
+      "AM-MED\t0000 100.00\t0000 0.00\t0000 0.00\t0000 0.00\n",
+      "AM-MNR\t0412 100.00\t0377 91.50\t0017 4.13\t0018 4.37\n",
+      "AM-NEG\t0337 100.00\t0302 89.61\t0016 4.75\t0019 5.64\n",
+      "AM-PNC\t0171 100.00\t0159 92.98\t0007 4.09\t0005 2.92\n",
+      "AM-PRD\t0196 100.00\t0179 91.33\t0010 5.10\t0007 3.57\n",
+      "AM-REC\t0065 100.00\t0060 92.31\t0000 0.00\t0005 7.69\n",
+      "AM-TMP\t1147 100.00\t1059 92.33\t0043 3.75\t0045 3.92\n",
+      "train total: 12520 100.0\n",
+      "devel total: 13073 104.41693290734824\n",
+      "valid total: 553 4.416932907348243\n",
+      "test total: 541 4.321086261980831\n"
      ]
     }
    ],
@@ -1291,6 +1303,9 @@
     "devel_total=0\n",
     "train_total=0\n",
     "valid_total=0\n",
+    "test_total=0\n",
+    "total = 0 \n",
+    "\n",
     "# arguments=['A0','A1','A2','A3','A4','A5',\n",
     "# 'AM-ADV','AM-CAU','AM-DIR','AM-DIS','AM-EXT','AM-LOC',\n",
     "# 'AM-MED','AM-MNR','AM-NEG','AM-PNC','AM-PRD','AM-REC',\n",
@@ -1326,7 +1341,7 @@
     "    train_total+=    trainvalue\n",
     "    valid_total+=    validvalue\n",
     "    test_total+=     testvalue\n",
-    "    total += devel_total + te \n",
+    "    total += devel_total + test_total \n",
     "    buff = template.format(*stats_list_) \n",
     "    print(buff)    \n",
     "    \n",
