issue #2: PropbankEncoder massive refactoring

--- a/notebooks/08-spn_cwis_srl.ipynb
+++ b/notebooks/08-spn_cwis_srl.ipynb
@@ -664,8 +664,6 @@
     "idx2lex = propbank_encoder.idx2lex\n",
     "\n",
     "# FOR TEXTUAL DATA ONLY\n",
-    "lex2tok = propbank_encoder.lex2tok\n",
-    "tok2idx = propbank_encoder.tok2idx\n",
     "embeddings = propbank_encoder.embeddings\n",
     "\n",
     "n_targets = len(lex2idx['T'])"
@@ -774,7 +772,7 @@
     "            tuple_list = sorted(tuple_list, key=lambda x: x[0])            \n",
     "            # Converts lexicon (raw/indexed) into token (embedded/indexed)\n",
     "            if (('FORM' in column) or ('LEMMA' in column)):\n",
-    "                values_list = [tok2idx[lex2tok[idx2lex[column][tuple_[1]]]]                \n",
+    "                values_list = [idx2lex[column][tuple_[1]]                \n",
     "                                   for tuple_ in tuple_list]\n",
     "            else:\n",
     "                values_list = [tuple_[1] for tuple_ in tuple_list]\n",
@@ -1008,7 +1006,7 @@
    "outputs": [],
    "source": [
     "# Parameters\n",
-    "vocab_size = len(tok2idx)\n",
+    "vocab_size = len(embeddings)\n",
     "embed_size = 50\n",
     "\n",
     "n_pos = len(lex2idx['GPOS'])\n",
