issue #11: ConllEvaluator refactored

--- a/notebooks/07-evaluations_consolidate.ipynb
+++ b/notebooks/07-evaluations_consolidate.ipynb
@@ -41,7 +41,7 @@
     "from collections import defaultdict\n",
     "\n",
     "# custom models that allow evaluation\n",
-    "from models import EvaluatorConll, PropbankEncoder # Runs conll official script under the hood\n",
+    "from models import ConllEvaluator, PropbankEncoder # Runs conll official script under the hood\n",
     "# from models.propbank import Propbank # Propbank class that acts as a wrapper to binaries\n",
     "# from propbank_encoder import PropbankEncoder\n",
     "# from propbank_mappers import MapperT2ARG, MapperIDX2CAT\n"
@@ -73,13 +73,13 @@
     "# mapper_t2arg = MapperT2ARG(propbank)\n",
     "# mapper_idx2cat = MapperIDX2CAT(propbank)\n",
     "\n",
-    "train_evaluator = EvaluatorConll('train', \n",
+    "train_evaluator = ConllEvaluator('train', \n",
     "        propbank.column('train', 'S', 'CAT'),\n",
     "        propbank.column('train', 'P', 'CAT'),\n",
     "        propbank.column('train', 'PRED', 'CAT'),\n",
     "        propbank.column('train', 'ARG', 'CAT')\n",
     ")\n",
-    "valid_evaluator = EvaluatorConll('valid', \n",
+    "valid_evaluator = ConllEvaluator('valid', \n",
     "        propbank.column('valid', 'S', 'CAT'),\n",
     "        propbank.column('valid', 'P', 'CAT'),\n",
     "        propbank.column('valid', 'PRED', 'CAT'),\n",
